[gd_scene load_steps=6 format=3 uid="uid://d1hme20pyi0mf"]

[ext_resource type="Texture2D" uid="uid://dkkxp07fdxtr1" path="res://PlaceHolderImage/fond noir.png" id="1_coafs"]
[ext_resource type="Script" uid="uid://bxm7mkmju5htb" path="res://scripts/carnet_open.gd" id="1_tealh"]
[ext_resource type="Texture2D" uid="uid://dmcsc27uexjr1" path="res://PlaceHolderImage/FondBlanc.png" id="2_tealh"]
[ext_resource type="Texture2D" uid="uid://dfivgmh25wqi5" path="res://PlaceHolderImage/PhotoPierre.png" id="3_10s37"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_6knx6"]
blend_mode = 3

[node name="carnet_open" type="Control"]
layout_mode = 3
anchor_right = 1.001
anchor_bottom = 1.0020001
offset_right = -0.92004395
offset_bottom = -0.16015625
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tealh")

[node name="CarnetSprite" type="TextureRect" parent="."]
material = SubResource("CanvasItemMaterial_6knx6")
layout_mode = 0
offset_left = 2.0
offset_top = -4.0
offset_right = 1485.0
offset_bottom = 825.0
texture = ExtResource("1_coafs")

[node name="Page1" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 76.0
offset_top = 48.0
offset_right = 709.0
offset_bottom = 771.0
texture = ExtResource("2_tealh")

[node name="Photo" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 298.0
offset_top = 71.0
offset_right = 487.0
offset_bottom = 246.0
texture = ExtResource("3_10s37")
expand_mode = 1

[node name="Page2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 772.0
offset_top = 48.0
offset_right = 1403.0
offset_bottom = 771.0
texture = ExtResource("2_tealh")

[node name="DescriptionCommande" type="Label" parent="."]
layout_mode = 0
offset_left = 774.99994
offset_top = 46.00006
offset_right = 1278.1746
offset_bottom = 88.00006
scale = Vector2(1.26, 1.26)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Description de la commande"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionCommande2" type="Label" parent="."]
layout_mode = 0
offset_left = 77.0
offset_top = 315.99994
offset_right = 577.00006
offset_bottom = 357.99994
scale = Vector2(1.26, 1.26)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Commande"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ch_Name" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 76.00001
offset_top = 257.0
offset_right = 579.17456
offset_bottom = 299.0
scale = Vector2(1.26, 1.26)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Pierre"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ch_Name2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 76.840004
offset_top = 389.72
offset_right = 708.84906
offset_bottom = 431.81802
scale = Vector2(1.26, 1.26)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Pierre"
vertical_alignment = 1
autowrap_mode = 3

[node name="ch_Lien" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 77.041
offset_top = 426.78796
offset_right = 580.54553
offset_bottom = 468.15384
scale = Vector2(1.26, 1.26)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Mari"
vertical_alignment = 1
autowrap_mode = 3

[node name="ch_Resume" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 81.038994
offset_top = 536.99194
offset_right = 578.1944
offset_bottom = 723.1403
scale = Vector2(1.26, 1.26)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "résumé/description"
autowrap_mode = 3

[node name="ch_Elem_Commande" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 780.402
offset_top = 131.24202
offset_right = 1270.4125
offset_bottom = 326.3294
scale = Vector2(1.26, 1.26)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "- exemple"
autowrap_mode = 3
